@@ -20,6 +20,8 @@ import com.ibm.wala.classLoader.IClass;
 import com.ibm.wala.classLoader.IMethod;
 import com.ibm.wala.classLoader.NewSiteReference;
 import com.ibm.wala.ipa.callgraph.CGNode;
+import com.ibm.wala.ipa.callgraph.Context;
+import com.ibm.wala.ipa.callgraph.ContextKey;
 import com.ibm.wala.ipa.callgraph.propagation.ConstantKey;
 import com.ibm.wala.ipa.callgraph.propagation.ReceiverInstanceContext;
 import com.ibm.wala.ipa.callgraph.propagation.SSAContextInterpreter;
@@ -29,6 +31,7 @@ import com.ibm.wala.shrikeBT.IInvokeInstruction.Dispatch;
 import com.ibm.wala.ssa.ConstantValue;
 import com.ibm.wala.ssa.DefUse;
 import com.ibm.wala.ssa.IR;
+import com.ibm.wala.ssa.IRView;
 import com.ibm.wala.ssa.ISSABasicBlock;
 import com.ibm.wala.ssa.SSACheckCastInstruction;
 import com.ibm.wala.ssa.SSAInstruction;
@@ -68,8 +71,8 @@ public class ReflectiveInvocationInterpreter extends AbstractReflectionInterpret
     if (DEBUG) {
       System.err.println("generating IR for " + node);
     }
-    ReceiverInstanceContext recv = (ReceiverInstanceContext) node.getContext();
-    ConstantKey c = (ConstantKey) recv.getReceiver();
+    Context recv = node.getContext();
+    ConstantKey c = (ConstantKey) recv.get(ContextKey.RECEIVER);
     IMethod m = (IMethod) c.getValue();
 /** BEGIN Custom change: caching */
     final IMethod method = node.getMethod();
@@ -84,6 +87,11 @@ public class ReflectiveInvocationInterpreter extends AbstractReflectionInterpret
     
 /** END Custom change: caching */
     return result;
+  }
+
+  @Override
+  public IRView getIRView(CGNode node) {
+    return getIR(node);
   }
 
   /*
@@ -103,11 +111,11 @@ public class ReflectiveInvocationInterpreter extends AbstractReflectionInterpret
     if (node == null) {
       throw new IllegalArgumentException("node is null");
     }
-    if (!(node.getContext() instanceof ReceiverInstanceContext)) {
+    if (!(node.getContext().isA(ReceiverInstanceContext.class))) {
       return false;
     }
-    ReceiverInstanceContext r = (ReceiverInstanceContext) node.getContext();
-    if (!(r.getReceiver() instanceof ConstantKey)) {
+    Context r = node.getContext();
+    if (!(r.get(ContextKey.RECEIVER) instanceof ConstantKey)) {
       return false;
     }
     return node.getMethod().getReference().equals(METHOD_INVOKE) || node.getMethod().getReference().equals(CTOR_NEW_INSTANCE);
@@ -140,7 +148,7 @@ public class ReflectiveInvocationInterpreter extends AbstractReflectionInterpret
    * @param method is something like Method.invoke or Construction.newInstance
    * @param target is the method being called reflectively
    */
-  private IR makeIR(IMethod method, IMethod target, ReceiverInstanceContext context) {
+  private IR makeIR(IMethod method, IMethod target, Context recv) {
     SSAInstructionFactory insts = method.getDeclaringClass().getClassLoader().getInstructionFactory();
 
     SpecializedMethod m = new SpecializedMethod(method, method.getDeclaringClass(), method.isStatic(), false);
@@ -181,7 +189,7 @@ public class ReflectiveInvocationInterpreter extends AbstractReflectionInterpret
     for (int j = nextArg; j < nargs; j++) {
       // load the next parameter into v_temp.
       int indexConst = nextLocal++;
-      constants.put(new Integer(indexConst), new ConstantValue(nextParameter++));
+      constants.put(Integer.valueOf(indexConst), new ConstantValue(nextParameter++));
       int temp = nextLocal++;
       m.addInstruction(null, insts.ArrayLoadInstruction(m.allInstructions.size(), temp, parametersVn, indexConst, TypeReference.JavaLangObject), false);
       pc++;
@@ -219,7 +227,7 @@ public class ReflectiveInvocationInterpreter extends AbstractReflectionInterpret
     SSAInstruction[] instrs = new SSAInstruction[m.allInstructions.size()];
     m.allInstructions.<SSAInstruction> toArray(instrs);
 
-    return new SyntheticIR(method, context, new InducedCFG(instrs, method, context), instrs, SSAOptions.defaultOptions(), constants);
+    return new SyntheticIR(method, recv, new InducedCFG(instrs, method, recv), instrs, SSAOptions.defaultOptions(), constants);
   }
 
   @Override
