@@ -21,6 +21,8 @@ import com.ibm.wala.util.debug.Assertions;
  */
 class DebuggingMutableIntSet implements MutableIntSet {
 
+  private static final long serialVersionUID = 6879912730471879687L;
+
   final MutableIntSet primaryImpl;
 
   final MutableIntSet secondaryImpl;
@@ -311,19 +313,13 @@ class DebuggingMutableIntSet implements MutableIntSet {
   @Override
   public void foreach(IntSetAction action) {
     final Set<Integer> bits = HashSetFactory.make();
-    primaryImpl.foreach(new IntSetAction() {
-      @Override
-      public void act(int x) {
-        assert !bits.contains(new Integer(x));
-        bits.add(new Integer(x));
-      }
+    primaryImpl.foreach(x -> {
+      assert !bits.contains(Integer.valueOf(x));
+      bits.add(Integer.valueOf(x));
     });
-    secondaryImpl.foreach(new IntSetAction() {
-      @Override
-      public void act(int x) {
-        assert bits.contains(new Integer(x));
-        bits.remove(new Integer(x));
-      }
+    secondaryImpl.foreach(x -> {
+      assert bits.contains(Integer.valueOf(x));
+      bits.remove(Integer.valueOf(x));
     });
     assert bits.isEmpty();
 
@@ -336,19 +332,13 @@ class DebuggingMutableIntSet implements MutableIntSet {
   @Override
   public void foreachExcluding(IntSet X, IntSetAction action) {
     final Set<Integer> bits = HashSetFactory.make();
-    primaryImpl.foreachExcluding(X, new IntSetAction() {
-      @Override
-      public void act(int x) {
-        assert !bits.contains(new Integer(x));
-        bits.add(new Integer(x));
-      }
+    primaryImpl.foreachExcluding(X, x -> {
+      assert !bits.contains(Integer.valueOf(x));
+      bits.add(Integer.valueOf(x));
     });
-    secondaryImpl.foreachExcluding(X, new IntSetAction() {
-      @Override
-      public void act(int x) {
-        assert bits.contains(new Integer(x));
-        bits.remove(new Integer(x));
-      }
+    secondaryImpl.foreachExcluding(X, x -> {
+      assert bits.contains(Integer.valueOf(x));
+      bits.remove(Integer.valueOf(x));
     });
     assert bits.isEmpty();
 
